compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__try_to_construct_never.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn() {\n  Never\n}\n"
---
error: Unknown variable
  ┌─ /src/one/two.gleam:3:3
  │
3 │   Never
  │   ^^^^^

`Never` is a type, it cannot be used as a value.
